--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "shopify hydrogen preview --build",
     "lint": "eslint --no-error-on-unmatched-pattern .",
     "typecheck": "tsc --noEmit",
-    "codegen": "shopify hydrogen codegen"
+    "codegen": "shopify hydrogen codegen",
+    "start": "node server.js"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
